syntax = "proto3";

package com.nikitahohulia.nats.reqreply.user.get_all.proto;

option java_multiple_files = true;

import "com/nikitahohulia/nats/commonmodels/user/user.proto";

message GetAllUsersRequest {

}

message GetAllUsersResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.user.UserList users = 1;
  }

  message Failure {
    string message = 1;
  }
}
